1999-10-24  Gerd Moellmann  <gerd@gnu.org>

	* window.c (Fnext_window): Add a QUIT in the loop.

1999-10-23  Gerd Moellmann  <gerd@gnu.org>

	* Makefile.in (bootstrap, bootstrap-emacs, bootstrap-temacs): 
	New targets.

1999-10-22  Dave Love  <fx@gnu.org>

	* emacs.c (main): Enable profiling conditional on __linux also.

1999-10-20  Gerd Moellmann  <gerd@gnu.org>

	* xrdb.c (x_load_resources): Set default resources for resource
	classes instead of for the specific Emacs.

1999-10-19  Gerd Moellmann  <gerd@gnu.org>

	* s/freebsd.h (HAVE_GETLOADAVG): Define as 1 because config.h
	defines it that way.
	
	* xdisp.c (echo_area_display) [HAVE_X_WINDOWS]: Do nothing
	if selected_frame is equal to Vterminal_frame.

1999-10-19  Paul Eggert  <eggert@twinsun.com>
	
	Add support for large files, 64-bit Solaris, system locale codings.
	
	* Makefile.in (emacs): Set the LC_ALL environment variable to "C"
	when dumping, so that the dumped Emacs doesn't have stray locale info.
	(dired.o): Depend on systime.h.
	(editfns.o): Depend on coding.h.

	* alloc.c, buffer.c, callproc.c, ccl.c, charset.c, coding.c, data.c,
	dispnew.c, editfns.c, emacs.c, filelock.c, floatfns.c, hftctl.c,
	keyboard.c, process.c, sysdep.c, unexelf.c, unexhp9k800.c,
	unexsunos4.c, vmsfns.c, vmsgmalloc.c, w32faces.c, w32menu.c, w32term.c,
	w32xfns.c, xfaces.c, xfns.c, xmenu.c, xterm.c:
	Include <config.h> before any system include files.

	* alloc.c, buffer.c, ccl.c, data.c, editfns.c, emacs.c, eval.c,
	fileio.c, filelock.c, frame.c, insdel.c, keymap.c, lread.c,
	m/alpha.h, print.c, search.c, sysdep.c, xdisp.c, xfaces.c, xfns.c,
	xmenu.c, xterm.c:
	Do not include <stdlib.h>, as <config.h> does this now.

	* callproc.c (Fcall_process):
	Synchronize messages locale before invoking strerror.
	Decode resulting string with locale-coding-system.

	* coding.c (Vlocale_coding_system): New var.
	(syms_of_coding): Adjust to above change.
	(emacs_strerror): New function.
